# OctopusSimulator

./: .gitignore  CMakeLists.txt  Octopus_Simulator.cpp  README.md  instruction_count.txt  output_gem.txt  regression_optimizedO3_build_Octopus2L_Ruby.txt  regression_optimizedO3_build_Octopus2L_Ruby_Barns.txt  stats_only_output.txt  stats_output_Octopus.txt  sweep_output.txt  sweep_output_2level.txt  sweep_output_2level_2.txt  sweep_output_3level.txt  sweep_output_Octopus2L_Ruby.txt  sweep_output_Octopus2L_Ruby_cycles.txt  sweep_output_Octopus3L.txt  sweep_output_Octopus3L_Ruby.txt  sweep_output_Octopus3L_cycles.txt  sweep_output_Ruby_3Level.txt  sweep_output_Ruby_Octopus2L.txt  sweep_output_gem5.txt  sweep_output_level3.txt  sweep_output_level3_2.txt  sweep_output_level3_3.txt  sweep_output_level3_4.txt  testcases.sh  testcasesStats.sh  testcasesStatsOnly.sh  testcases_sweep.sh  times
ext/CMSpec/CMSpec_3LCaching/: CMakeLists.txt
ext/CMSpec/CMSpec_3LCaching/Protocols_FSM/: MESI_splitBus_snooping.csv
ext/CMSpec/CMSpec_3LCaching/header/: CMakeLists.txt  CPU.h  CacheController.h  CacheControllerExclusive.h  CacheController_End2End.h  CacheDataHandler.h  CacheDataHandler_COTS.h  CacheSim.h  CommunicationInterface.h  ExternalMem.h  FRFCFS_Buffer.h  GenericCacheLine.h  Initializable.h  Logger.h  MCoreSimProject.h  MCoreSimProjectXml.h  MainMemoryController.h
ext/CMSpec/CMSpec_3LCaching/src/: CMakeLists.txt  CPU.cpp  CacheController.cpp  CacheControllerExclusive.cpp  CacheController_End2End.cpp  CacheDataHandler.cpp  CacheDataHandler_COTS.cpp  CacheSim.cpp  ClockManager.cpp  ExternalCPU.cpp  ExternalMem.cpp  GenericCacheLine.cpp  MCoreSimProject.cc  MainMemoryController.cpp
header/: CPU.h  (+21 more)
src/: CLParser.cpp  CMakeLists.txt  CPU.cpp  CacheDataHandler.cpp  CacheDataHandler_COTS.cpp  CacheSim.cpp  ClockManager.cpp  CommandLine.cpp  Configurable.cpp  DebugPrint.cpp  ExternalCPU.cpp  FSMReader.cpp  GenericCacheLine.cpp  Logger.cpp  MCoreSimProject.cc  MCsimInterface.cpp  MainMemoryController.cpp
src/Arbiters/: Arbiter.cpp  CMakeLists.txt  FCFSArbiter.cpp  RRArbiter.cpp  TDMArbiter.cpp
src/CacheControllers/: BaseController.cpp  CMakeLists.txt  CacheController.cpp  CacheControllerDirectory.cpp  CacheControllerExclusive.cpp  CacheController_End2End.cpp
src/Interconnect/: Bus.cpp  BusController.cpp  BusInterface.cpp  CMakeLists.txt  DirectController.cpp  DirectInterconnect.cpp  Mesh.cpp  MeshController.cpp  MeshInterface.cpp  NoC.cpp  NoCController.cpp  NoCInterface.cpp  Point2PointController.cpp  SplitBusController.cpp  TripleBus.cpp  TripleBusController.cpp  TripleBusInterface.cpp  UnifiedBusController.cpp
src/Protocols/: CMakeLists.txt  CoherenceProtocolHandler.cpp  LLCMESIDirectory.cpp  LLCMESIProtocol.cpp  LLCMOESIDirectory.cpp  LLCMSIDirectory.cpp  LLCMSIProtocol.cpp  LLCPMESIProtocol.cpp  LLCPMSIProtocol.cpp  MESIDirectory.cpp  MESIProtocol.cpp  MOESIDirectory.cpp  MOESIProtocol.cpp  MSIDirectory.cpp  MSIProtocol.cpp  PMESIAsteriskProtocol.cpp  PMESIProtocol.cpp  PMSIAsteriskProtocol.cpp  PMSIProtocol.cpp
src/ReplacementPolicies/: CMakeLists.txt  LeastRecentlyUsed.cpp  Random.cpp
src/SystemConfigurations/: CMakeLists.txt  MultiCoreSystem.cpp  MultiCoreSystem_Mesh.cpp
src/arch/x86/m5out/: config.ini  config.json
src/base/m5out/: config.ini  config.json
src/cpu/: exetrace.cc
src/cpu/minor/: fetch1.cc
src/cpu/simple/: atomic.cc  atomic.hh  timing.cc
src/cpu/simple/m5out/: config.ini  config.json
src/learning_gem5/part2/: SimpleCache.py  out.txt  out_org.txt  simple_cache.cc  simple_cache.hh
src/mem/: mem_ctrl.cc  physical.hh
src/mem/cache/: Cache.py  base.cc  base.hh  cache.cc  output.txt  output_gem.txt
src/mem/m5out/: config.ini  config.json
src/sim/: futex_map.cc  syscall_emul.hh
src/sim/m5out/: config.ini  config.json  stats.txt
(+2922 files in other folders)
